# glad

./: CMakeLists.txt  README.md  conanfile.py
include/glad/: glad.h
src/: CMakeLists.txt  glad.c
